# repo-rules-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/repo-rules/: SKILL.md
skills/repo-rules/: SKILL.md
src/rules_agent/: __init__.py  cli.py  config.py  config.toml
src/rules_agent/rules/: __init__.py  discovery.py  eval.py  eval_prompts.py  extractor.py  index.py  models.py  paths.py  prompts.py  query.py
src/rules_agent/skill/: SKILL.md
tests/: __init__.py  test_discovery.py  test_eval.py  test_extractor.py  test_index.py  test_install_skill.py  test_paths.py  test_query.py  test_stats.py
