[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-rules-agent"
version = "0.9.0"
description = "Extract and index AI coding instructions from rules files"
requires-python = ">=3.10.12,<3.14"
dependencies = [
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.68.0",
    "chonkie>=1.0.0",
]

[project.scripts]
repo-rules-agent = "rules_agent.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.6,<1",
    "pytest>=8,<9",
    "pytest-custom-exit-code>=0.0.0,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rules_agent"]

[tool.ruff]
line-length = 120
extend-exclude = ["__pycache__"]
